; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb.c_git_odb__set_caps.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb.c_git_odb__set_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@GIT_ODB_CAP_FROM_OWNER = common dso_local global i32 0, align 4
@GIT_ERROR_ODB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"cannot access repository to set odb caps\00", align 1
@GIT_CONFIGMAP_FSYNCOBJECTFILES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_odb__set_caps(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @GIT_ODB_CAP_FROM_OWNER, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %35

11:                                               ; preds = %2
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %11
  %19 = load i32, i32* @GIT_ERROR_ODB, align 4
  %20 = call i32 @git_error_set(i32 %19, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %36

21:                                               ; preds = %11
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @GIT_CONFIGMAP_FSYNCOBJECTFILES, align 4
  %24 = call i32 @git_repository__configmap_lookup(i32* %7, i32* %22, i32 %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %34, label %26

26:                                               ; preds = %21
  %27 = load i32, i32* %7, align 4
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = xor i1 %29, true
  %31 = zext i1 %30 to i32
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  br label %34

34:                                               ; preds = %26, %21
  br label %35

35:                                               ; preds = %34, %2
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %35, %18
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @git_error_set(i32, i8*) #1

declare dso_local i32 @git_repository__configmap_lookup(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
